Updated the font size and added some more place filler data. This requires data structure remodeling as well.

--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,12 @@ code {
 .image-divider{
   padding-top:2vw;
 }
+
+.tab-content {
+  font-size: 2.5vw;
+}
+
+.pro-con-title {
+  font-size: 3vw;
+  font-weight: 600;
+}
