Migrated the Health products fetch to API Amplify. Dismanteled the existing APIG, lmabda, role and policies as these are now moderated by the SDK.

--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ code {
 }
 
 .product-card{
-  border: 1px solid red;
+  border: 1px solid #274c77;
   margin:1em;
   padding:1em;
   box-shadow: 0 0 1vw #274c77;
